@@ -149,6 +149,12 @@ Changes in 1.7
 ----------------
 Changes in 1.6.1
 
+ - Fix pingpong for CSceneNodeAnimatorFlyStraight (found by gbox)
+
+ - Fix bug with IGUIEditBox where the cursor position is reset on text change.
+
+ - Make sure the window top-left corner on Windows is not negative on start so that Windows sytem-menu is always visible.
+
  - Fix problem that the window did sometimes not get the keyboard focus in X11 in fullscreen. Add more debug output in case focus grabbing goes wrong.
 
  - Fix screensize in videodriver when we didn't get the requested window size. This also prevents that gui-clicks are no longer synchronized with gui-drawing and elements can't be hit anymore.
